# goit-pythonweb-hw-10

./: .env.example  README.md  pyproject.toml
migrations/: env.py
migrations/versions/: 186f90aef183_add_auth_user.py
src/: main.py
src/api/: contacts.py  utils.py
src/api/dependencies/: __init__.py  auth_dependencies.py  service_dependencies.py  token_dependencies.py
src/api/errors/: __init__.py  error_responses.py  http_errors.py
src/api/responses/: error_responses.py  success.py  success_responses.py
src/api/routers/: __init__.py  auth_router.py  contacts_router.py  current_user_router.py  me_router.py  root_router.py  utils_router.py
src/api/schemas/: auth.py  contacts.py  errors.py  mixins.py  users.py
src/api/schemas/contacts/: fields.py  requests.py  responses.py
src/api/schemas/users/: fields.py  requests.py  responses.py  validators.py
src/api/schemas/validators/: common.py  contacts.py
src/config/: app_config.py
src/database/: db.py  models.py
src/database/models/: __init__.py  auth.py  contact.py  mixins.py
src/db/models/: mixins.py  user.py
src/db/models/enums/: user_roles.py
src/db/repository/: contacts_repository.py  users_repository.py
src/repository/: contacts.py  contacts_repository.py
src/schemas/: contacts.py  errors.py  mixins.py  pagination.py  utils.py
src/services/: __init__.py  auth_service.py  contact_service.py  contacts_service.py  user_service.py
src/services/errors/: __init__.py  services_errors.py
src/utils/: constants.py  errors.py  orm_helpers.py
src/utils/security/: jwt_utils.py
